Fixed 'other reactions' wrapping, fixed a few conspicuous globals, fixed facebook links in teh facebpile, spelled commit horribly

--- a/rb/templates/widget.css
+++ b/rb/templates/widget.css
@@ -528,12 +528,12 @@ div.rdr .rdr_image_reactions .rdr_read .rdr_rightBox {background: none !importan
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader.rdr_has_comment div.rdr_rightBox span {display: block; margin-right: 18px; margin-top: 2px; text-align: right;}
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_contentHeader div.rdr_can_comment                   {background:none; float:right; font-weight:normal; margin-right:5px; text-transform:uppercase; font-size:9px; display:none; cursor:pointer; color:#666;}
 #rdr_sandbox div.rdr div.rdr_contentSet:hover div.rdr_contentHeader div.rdr_can_comment    {display:block;}
-#rdr_sandbox div.rdr div.rdr_contentSet div.rdr_content { color:#787878; font:17px Georgia; padding:2px 9px; }
+#rdr_sandbox div.rdr div.rdr_contentSet div.rdr_content { color:#787878; font:17px Georgia; padding:2px 9px;}
 #rdr_sandbox div.rdr div.rdr_contentSet div.rdr_content p { width:auto; padding:0 4px; font-family:'ReadrLeague', Arial, sans-serif; font-size:26px;}
 
 #rdr_sandbox div.rdr div.rdr_whyPanel div.rdr_otherTagsWrap  { position:absolute; border-top:1px solid #ccc; background:#fff; width:100%; bottom:-10px; height:22px; z-index:4;}
 
-#rdr_sandbox div.rdr div.rdr_whyPanel div.rdr_otherTags { color:#666; padding:5px 12px; font-size:11px; display:inline-block; width: auto; }
+#rdr_sandbox div.rdr div.rdr_whyPanel div.rdr_otherTags { color:#666; padding:5px 12px; font-size:11px; display:inline-block; width: auto; white-space:nowrap;}
 #rdr_sandbox div.rdr div.rdr_whyPanel div.rdr_otherTags span.rdr_tags_list_tag{ padding:0 !important; }
 
 #rdr_sandbox div.rdr div.rdr_whyPanel div.rdr_otherTags em         {color:#76a1ba; display: block; font-family:Arial; font-size:11px; margin-top:10px;}
